Rename Dashboard to Orders in navigation

--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,7 @@
                 <li><a href="categories/beverage.html" class="nav-item">🥤 Beverage</a></li>
                 <li><a href="categories/medicine.html" class="nav-item">💊 Medicine</a></li>
                 <li><a href="categories/grocery.html" class="nav-item">🛒 Grocery</a></li>
-                <li><a href="dashboard.html" class="nav-item dashboard-link active">📦 Dashboard</a></li>
+                <li><a href="dashboard.html" class="nav-item dashboard-link active">📦 Orders</a></li>
             </ul>
         </div>
     </nav>
