Add Flowise chatbot integration to index and dashboard pages

--- a/index.html
+++ b/index.html
@@ -93,5 +93,12 @@
     </footer>
 
     <script src="app.js"></script>
+    <script type="module">
+        import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
+        Chatbot.init({
+            chatflowid: "245869bf-a845-4ff2-b6a6-eb447149864b",
+            apiHost: "https://cloud.flowiseai.com",
+        })
+    </script>
 </body>
 </html>
