Change website name from QuickDeliver to DeliveryItAll

--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar-container">
-            <h1 class="logo">🚚 QuickDeliver</h1>
+            <h1 class="logo">🚚 DeliveryItAll</h1>
             <ul class="nav-links">
                 <li><a href="index.html" class="nav-item">Home</a></li>
                 <li><a href="categories/food.html" class="nav-item">🍔 Food</a></li>
@@ -104,7 +104,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2026 QuickDeliver. Fast delivery across Singapore | All rights reserved</p>
+        <p>&copy; 2026 DeliveryItAll. Fast delivery across Singapore | All rights reserved</p>
     </footer>
 
     <script src="app.js"></script>
