--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QuickDeliver - Fast Delivery Service</title>
+    <title>DeliveryItAll - Fast Delivery Service</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="navbar-container">
-            <h1 class="logo">🚚 QuickDeliver</h1>
+            <h1 class="logo">🚚 DeliveryItAll</h1>
             <ul class="nav-links">
                 <li><a href="index.html" class="nav-item active">Home</a></li>
                 <li><a href="categories/food.html" class="nav-item">🍔 Food</a></li>
@@ -63,7 +63,7 @@
     </section>
 
     <section class="features">
-        <h2>Why Choose QuickDeliver?</h2>
+        <h2>Why Choose DeliveryItAll?</h2>
         <div class="features-grid">
             <div class="feature">
                 <span class="feature-icon">⚡</span>
@@ -89,7 +89,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 QuickDeliver. Fast delivery across Singapore | All rights reserved</p>
+        <p>&copy; 2026 DeliveryItAll. Fast delivery across Singapore | All rights reserved</p>
     </footer>
 
     <script src="app.js"></script>
